<resources>
    <string name="app_name">GezginApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="str_login">GİRİŞ YAP</string>
    <string name="str_register">KAYIT OL</string>
    <string name="str_et_email">Email Adresiniz</string>
    <string name="str_et_password">Parola</string>
    <string name="str_et_password_okay">Parola Onay</string>

</resources>
