<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/login"
    android:padding="16dp"

    >
    <LinearLayout
        android:paddingBottom="100dp"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/str_et_email"
        android:background="@color/white"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/str_et_password"
        android:background="@color/white"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_login"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_go_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_register"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        />
    </LinearLayout>
</RelativeLayout>