<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="@drawable/login"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:paddingBottom="100dp">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/str_et_email"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
         />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/str_et_password"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
         />

    <EditText
        android:id="@+id/et_password_okay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/str_et_password_okay"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
         />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_register"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
         />
    </LinearLayout>
</RelativeLayout>